--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 # Use this file to keep certain files from being versioned (covered in the GitHub part of the course).
-
 .DS_Store
 .Rproj.user
 data/
@@ -14,3 +13,4 @@ data/
 *.tsv.gz
 *.zip
 *.parquet
+.Rhistory
