Updated gitignore to keep temp and output folders

--- a/gen/.gitignore
+++ b/gen/.gitignore
@@ -1,2 +1,8 @@
 *
-!.gitignore
+# ignore everything in gen
+**
+# but keep the directory placeholders
+!temp/
+!output/
+!temp/.gitkeep
+!output/.gitkeep
