Updated gitignore to include folders in gen

--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,20 @@
-# Use this file to keep certain files from being versioned (covered in the GitHub part of the course).
-# OS / RStudio junk
-.DS_Store
-.Rproj.user
+# R defaults
 .Rhistory
+.RData
+.Rproj.user/
 
-# --- DATA: ignore contents but keep the folder visible ---
-data/*
+# macOS
+.DS_Store
+
+# data/gen structure rules (as we set earlier)
+data/**
+!data/
 !data/.gitignore
 
-# If you still want to ignore these anywhere else in the repo:
-*.tsv.gz
-*.zip
-*.parquet
-*.csv
-*.png
-
-# --- GEN: ignore outputs but keep the folders visible ---
-gen/*
+gen/**
+!gen/
 !gen/.gitignore
-
-# Keep subfolders but ignore their contents (optional, if you use them)
-gen/output/*
+!gen/output/
+!gen/temp/
 !gen/output/.gitignore
-gen/temp/*
 !gen/temp/.gitignore
-
