--- a/gen/.gitignore
+++ b/gen/.gitignore
@@ -1,8 +1,2 @@
 *
-# ignore everything in gen
-**
-# but keep the directory placeholders
-!temp/
-!output/
-!temp/.gitkeep
-!output/.gitkeep
+!.gitignore
