Keep only src/ README.md, makefile; ignore Rstudio files

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,4 @@
 !makefile       # add !Makefile too if capitalized
 !/src/
 !/src/**
-
-# RStudio / R
-.Rproj.user/
-*.Rproj
-.Rhistory
-.RData
+.Rproj.user
