--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
-/*               # ignore everything at repo root
+/*
 !.gitignore
 !README.md
-!makefile       # add !Makefile too if capitalized
+!makefile    # add !Makefile too if capitalized
 !/src/
 !/src/**
-.Rproj.user
+
+# ignore report build artifacts inside src/reporting
+src/reporting/**/*_files/
+src/reporting/**/_cache/
+src/reporting/**/cache/
+src/reporting/**/*.html
+src/reporting/**/*.pdf
+src/reporting/**/*.docx
