defined variables for the relative paths

--- a/src/data-preparation/Makefile
+++ b/src/data-preparation/Makefile
@@ -1,25 +1,27 @@
 .PHONY: all install clean
 
+OUTPUT = ../../gen/output
+TEMP = ../../gen/temp
 # 0) Run everything (to ROOT/gen/output/final_dataset.csv)
-all: ../../gen/output/final_dataset.csv
+all: $(OUTPUT)/final_dataset.csv
 
 install:
 	Rscript install_packages_for_data_preparation.R
 
 # 1) download → ROOT/gen/temp/*
-../../gen/temp/basics.csv ../../gen/temp/ratings.csv: download.R | install
-	mkdir -p ../../gen/temp
+$(TEMP)/basics.csv $(TEMP)/ratings.csv: download.R | install
+	mkdir -p $(TEMP)
 	Rscript download.R
 
 # 2) clean & merge → ROOT/gen/output/final_dataset.csv
-../../gen/output/final_dataset.csv: clean_and_merge.R ../../gen/temp/basics.csv ../../gen/temp/ratings.csv | install
-	mkdir -p ../../gen/output
+$(OUTPUT)/final_dataset.csv: clean_and_merge.R $(TEMP)/basics.csv $(TEMP)/ratings.csv | install
+	mkdir -p $(OUTPUT)
 	Rscript clean_and_merge.R
 
 clean:
-	rm -f ../../gen/temp/basics.csv \
-	      ../../gen/temp/ratings.csv \
-	      ../../gen/output/final_dataset.csv
+	rm -f $(TEMP)/basics.csv \
+	      $(TEMP)/ratings.csv \
+	      $(OUTPUT)/final_dataset.csv
 	     
 
 
