defined variables for the relative paths

--- a/src/analysis/Makefile
+++ b/src/analysis/Makefile
@@ -1,5 +1,8 @@
 .PHONY: all install desc_analysis regression results clean
 
+OUTPUT = ../../gen/output
+DATA_PREP = ../data-preparation
+
 # run everything here
 all: results
 
@@ -7,21 +10,21 @@ install:
 	Rscript install_packages_for_analysis.R
 
 # final dataset produced by data-prep (note the ../../ path!)
-../../gen/output/final_dataset.csv:
-	$(MAKE) -C ../data-preparation ../../gen/output/final_dataset.csv
+$(OUTPUT)/final_dataset.csv:
+	$(MAKE) -C $(DATA_PREP) $(OUTPUT)/final_dataset.csv
 
 # desc analysis depends on install + the final dataset
-desc_analysis: install ../../gen/output/final_dataset.csv
+desc_analysis: install $(OUTPUT)/final_dataset.csv
 	Rscript desc_analysis.R
 
-# produce the model file (regression.R writes ../../gen/output/regression_model.rds)
-../../gen/output/regression_model.rds: regression.R desc_analysis
+# produce the model file (regression.R writes $(OUTPUT)/regression_model.rds)
+$(OUTPUT)/regression_model.rds: regression.R desc_analysis
 	Rscript regression.R
 
 # results depend on the model file (not the script)
-results: ../../gen/output/regression_model.rds
+results: $(OUTPUT)/regression_model.rds
 	Rscript make_reg_outputs.R
 
 clean:
-	rm -f ../../gen/output/desc-analysis-figures/*.png || true
-	rm -f ../../gen/output/regression_model.rds || true
+	rm -f $(OUTPUT)/desc-analysis-figures/*.png || true
+	rm -f $(OUTPUT)/regression_model.rds || true
