transfered from reporting folder to output folder

--- a/src/reporting/makefile
+++ b/src/reporting/makefile
@@ -2,15 +2,15 @@
 
 # change this if your file is named Paper.Rmd
 RMD     := report.Rmd
-OUTDIR  := ../../gen/output/reporting
-HTML    := $(OUTDIR)/report.html
+OUTPUT  := ../../gen/output
+HTML    := $(OUTPUT)/report.html
 
 all: report
 report: $(HTML)
 
 $(HTML): $(RMD)
 	# ensure output dir exists
-	mkdir -p "$(OUTDIR)"
+	mkdir -p "$(OUTPUT)"
 	# render Rmd -> HTML (force HTML regardless of YAML)
 	Rscript -e "rmarkdown::render('$(RMD)', \
 	  output_format='html_document', \
